After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656566 - Call toolbar shouldn't disappear when the call isn't connected
Call toolbar shouldn't disappear when the call isn't connected
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-15 12:59 UTC by Jonny Lamb
Modified: 2011-08-22 16:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
CallWindow: don't hide the toolbar when not in a call (1.65 KB, patch)
2011-08-19 08:59 UTC, Emilio Pozuelo Monfort
reviewed Details | Review

Description Jonny Lamb 2011-08-15 12:59:55 UTC
When the call is connecting the toolbar giving the status shouldn't disappear. Simple.
Comment 1 Jonny Lamb 2011-08-15 13:28:15 UTC
And same with disconnecting.
Comment 2 Jonny Lamb 2011-08-15 13:28:23 UTC
I mean disconnected of course.
Comment 3 Emilio Pozuelo Monfort 2011-08-15 23:16:31 UTC
We need updated wireframes here to see the interaction between the status bar and the floating toolbar. We can certainly do this in the meantime though.
Comment 4 Emilio Pozuelo Monfort 2011-08-19 08:59:06 UTC
Created attachment 194199 [details] [review]
CallWindow: don't hide the toolbar when not in a call
Comment 5 Guillaume Desmottes 2011-08-19 09:18:53 UTC
Review of attachment 194199 [details] [review]:

Feel free to comment right away once you have added the comment.

::: src/empathy-call-window.c
@@ +1279,3 @@
   EmpathyCallWindow *self = data;
 
+  if (self->priv->call_state != CONNECTING &&

Add a comment explaining why we are doing that.
Comment 6 Emilio Pozuelo Monfort 2011-08-19 09:27:49 UTC
Added a comment and merged, thanks!
Comment 7 Nick Richards 2011-08-22 16:41:59 UTC
fwiw since I've updated the behaviour of the wireframes to reflect this. It has been changed in the latest call wireframes.

http://nickr.org/linux/wireframes/empathy-video-chat-wireframes.pdf

The toolbar should only be able to disappear when in an active call (this will
also solve the issues with denied or failed calls losing their messages)