CallWindow: don't hide the toolbar when not in a call

https://bugzilla.gnome.org/show_bug.cgi?id=656566